src/test/deca/context/invalid/this_dans_main.deca
// Description :
// this a linterrier d un print donc impossible 

// Resultats :
// Echec

{
    print(this);
}
